# RunLLM

./: .gitignore  .pre-commit-config.yaml  LLM.md  README.md  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  pytest.ini
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  0002_user_llm_fields.py
backend/runllm/: __init__.py  config.py  db.py  logging_config.py
backend/runllm/api/: __init__.py  app.py  auth.py  dependencies.py  main.py
backend/runllm/api/routers/: chat.py  garmin.py  health.py
backend/runllm/garmin/: __init__.py  client.py  crypto.py  exceptions.py  interface.py  models.py  service.py
backend/runllm/llm/: __init__.py  exceptions.py  prompt_builder.py  service.py  tools.py
backend/runllm/models/: __init__.py  activity.py  base.py  user.py
backend/runllm/processing/: __init__.py  mappers.py  processor.py  storage.py  timeseries.py
backend/scripts/: migrate.sh
backend/tests/: conftest.py  test_models.py
backend/tests/api/: conftest.py  test_auth.py  test_chat.py  test_garmin.py  test_health.py
backend/tests/garmin/: conftest.py  test_client.py  test_crypto.py  test_service.py
backend/tests/garmin/fixtures/: activities.json  details.json  splits.json  (+1 more)
backend/tests/integration/: conftest.py  test_full_stack_api.py  test_imports.py  test_ingestion_pipeline.py  test_llm_with_real_data.py
backend/tests/llm/: test_prompt_builder.py  test_service.py  test_tools.py
backend/tests/processing/: test_mappers.py  test_processor.py  test_storage.py  test_timeseries.py
(+22 files in other folders)
