[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runllm-backend"
version = "0.1.0"
description = "RunLLM backend — FastAPI service wrapping Garmin Connect with Claude."
readme = "../README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Sklyvan" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlmodel>=0.0.22",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "anthropic>=0.39",
    "garminconnect>=0.2.20",
    "cryptography>=42",
    "pyarrow>=16",
    "supabase>=2.6",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "black>=24.4",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "aiosqlite>=0.20",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["runllm*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "RUF"]
ignore = ["E501"]  # black handles line length

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = []

